2004-11-06  Lars Clausen  <lars@raeder.dk>

	* app/properties.c (create_dialog): 
	* app/diagram_tree_window.h: 
	* app/diagram_tree.h (HIDDEN_TYPES_NAME): 
	* app/diagram_tree_menu_callbacks.c: 
	* app/diagram_tree_window.c: 
	* app/diagram_tree_menu.c: 
	* app/diagram_tree.c: Changed to use persistence instead of
	strange hacks in preferences.

	* lib/persistence.h:
	* lib/persistence.c (persistent_list_get_glist): Don't deref null
	pointer.  New function persistent_list_remove_all, and
	fixed persistent_list_remove to ... work!

2004-11-05  Lars Clausen  <lars@raeder.dk>

	* app/paginate_psprint.c (diagram_print_ps): Call
	diagram_print_destroy on destroy rather than delete_event.  That
	way the gtk_widget_destroy() calls cleans up properly.  Fixes bug
	#154898. 

2004-11-02  Lars Clausen  <lars@raeder.dk>

	* objects/UML/class.c (umlclass_load): Actually load the saved
	fonts and font sizes.

	* configure.in: Require at least GTK+ 2.4.

	* app/filedlg.c: Changed to use 2.4 file dialog!  Finally,
	finally, finally.  Not quite bulletproof yet, and I need to figure
	out a minimum version of Gtk that doesn't spew warnings all over.

	* app/diagram.[ch]: diagram_set_filename with const filename.

	* app/sheets_dialog_callbacks.c
	(on_sheets_dialog_button_apply_clicked): Sheet menu now almost
	correctly recreated.  Still something fishy with the sheet menu in
	the dialog after adding a new sheet.  Probably the sheet name
	being stomped.

2004-11-01  Lars Clausen  <lars@raeder.dk>

	* lib/widgets.[ch] (dia_dynamic_menu_reset): Harden against memory
	stmping.  Now requires g_free here and there.

	* app/preferences.[ch] (prefs_data): Got rid of hidden prefs value
	for remembering last sheet, better off as persistent string.  Must
	hunt down other things like that.

	* app/interface.c (create_sheets): Now remembers last sheet
	selected again. Fixes bug #157036.

2004-11-01  Hans Breuer  <hans@breuer.org>
